0.8.2: BETA
     - fixed doc
     - fixed depracted hash handling
     - improved error handling in SMB backend
     - fixed Mac finder related bug with '&' in a pathname (thanx Florian Freund <mail@floek.net>)

0.8.1: 2011/7/11
     - Web interface:
           - added auto refresh feature
	   - fixed MAXFILENAMESIZE bug related to short SMB aliases
     - fixed Window Vista/7 client access bug (missing str2time in WebDAV::Properties; thanx Simon Jalandt <simon@jalandt.net>)
     - added missing doc

0.8.0: 2011/25/08
     - replaced OSSP::uuid with UUID::Tiny
     - migrated backend code into modules (FS, AFS, GFS backend modules)
     - added SMB/CIFS backend module for access ADS integrated Windows/Samba shares
     - added example DBB backend module (database backend)
     - fixed AFS performance bugs 
     - fixed security bug (accessing files outside $DOCUMENT_ROOT)
     - fixed MIME types related performace bug 
     - fixed CalDAV bug related to Sundbird reported by Andrius Preimantas
     - fixed move to trash bug reported by Andrius Preimantas
     - Web interface:
           - improved display of byte sizes (flexible unit change) (GET)
	   - added symbolic link support (POST)
	   - added view filter (GET)
	   - added list options (GET)
	   - added quota limit exceeded highlighting (GET)
	   - added extension support (GET)
	   - added view support (GET)
	   - fixed long navigation path bug (GET)
	   - added custom error doc support (GET/POST)
     - improved performance with the NYT profiler
     - fixed symlink move bug
     - fixed minor webdav.conf returns wrong result code bug (thanx Andrius Preimantas andrius.preimantas@gmail.com) 

0.7.0: 2011/29/04
     - fixed major search bug (SEARCH; thx jfotop@ath.forthnet.gr)
     - added folder redirect feature for disabled file/folder management requested by Laurent Bardi <Laurent.Bardi@ipbs.fr>